@startuml

title __STUDENT's Class Diagram__\n

  namespace stars.boundary {
    namespace student {
      class stars.boundary.student.AddIndexUI {
          + addIndex()
      }
    }
  }
  

  namespace stars.boundary {
    namespace student {
      class stars.boundary.student.ChangeIndexUI {
          + changeIndex()
      }
    }
  }
  

  namespace stars.boundary {
    namespace student {
      class stars.boundary.student.CheckVacanciesAvailableUI {
          + checkVacanciesAvailable()
      }
    }
  }
  

  namespace stars.boundary {
    namespace student {
      class stars.boundary.student.DropIndexUI {
          + dropIndex()
      }
    }
  }


  namespace stars.boundary {
    namespace student {
      class stars.boundary.student.PrintRegisteredCoursesUI {
          + printRegisteredCourses()

      }
      class stars.boundary.student.SwopIndexUI {
                  + swopIndex()
          }
      class stars.boundary.student.DropIndexUI {
                 + dropIndex()
             }
    }
  }
  


  

  stars.boundary.student.AddIndexUI -up-|> stars.boundary.SelectUI
  stars.boundary.student.ChangeIndexUI -up-|> stars.boundary.SelectUI
  stars.boundary.student.CheckVacanciesAvailableUI -up-|> stars.boundary.SelectUI
  stars.boundary.student.DropIndexUI -up-|> stars.boundary.SelectUI
  stars.boundary.student.SwopIndexUI -up-|> stars.boundary.SelectUI


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
